# AVATAR

./: .gitignore  LICENSE  README.md
arduino/: README.md
arduino/AVATAR/: library.properties
arduino/AVATAR/examples/Telemetry/: Telemetry.ino
arduino/AVATAR/src/: AVATAR.h
docs/: PROTOCOL.md
esp_side/: arm.c  arm_without_pid.c  drive.c
examples/led_blink/: README.md
examples/led_blink/arduino/LedBlink/: LedBlink.ino
orin_side/: arm.py  drive.py
python/: README.md  pyproject.toml
python/AVATAR/: __init__.py  engine.py
python/examples/: led_blink.py  telemetry.py
tools/: build_arduino_zip.sh
